# vasari-auto

./: pyproject.toml  utils.py  vasari_auto.py
vasari_auto/: vasari_auto.py
