[project]
name = "vasari-auto"
version = "0.1.0"
description = "Automated tools for Vasari project"
authors = [
    { name = "James Ruffle", email = "j.ruffle@ucl.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.dependencies]
numpy = "^1.24"
pandas = "^2.0"
seaborn = "^0.1"
requests = "^2.31"
antspyx = "^0.1"
nibabel = "^0.1"

[project.urls]
Homepage = "https://github.com/jamesruffle/vasari-auto"

[tool.setuptools]
packages = ["vasari_auto"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"