[project]
name = "vasari-auto"
version = "0.1.0"
description = "Automated tools for Vasari project"
authors = [
    { name = "James Ruffle", email = "j.ruffle@ucl.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
    "seaborn",
    "antspyx",
    "nibabel"
]

[project.urls]
Homepage = "https://github.com/jamesruffle/vasari-auto"

[tool.setuptools]
packages = ["vasari_auto"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"